[package]
name = "ordering_status"
description = "Get the ordering of a slice (ascending, descending, equal, none, undefined)"
keywords = ["sorted", "generic"]
categories = ["no-std", "algorithms"]
version = "0.7.0"
edition = "2021"
repository = "https://github.com/Rudxain/ordering_status"
#documentation = "https://docs.rs/ordering_status"
license = "Unlicense"
exclude = [".*"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
